--- a/ngx-admin/package.json
+++ b/ngx-admin/package.json
@@ -68,6 +68,7 @@
     "@angular/cli": "6.0.0",
     "@angular/compiler-cli": "6.0.0",
     "@angular/language-service": "6.0.0",
+    "@asymmetrik/ngx-leaflet": "^4.0.0",
     "@compodoc/compodoc": "1.0.1",
     "@types/jasmine": "2.5.54",
     "@types/jasminewd2": "2.0.3",
@@ -84,6 +85,7 @@
     "karma-coverage-istanbul-reporter": "1.3.0",
     "karma-jasmine": "1.1.0",
     "karma-jasmine-html-reporter": "0.2.2",
+    "leaflet": "^1.3.4",
     "npm-run-all": "4.0.2",
     "protractor": "5.1.2",
     "rimraf": "2.6.1",
