--- a/core/transaction/requirements.txt
+++ b/core/transaction/requirements.txt
@@ -1,1 +1,11 @@
+aniso8601==3.0.2
+Click==7.0
+Flask==1.0.2
+Flask-RESTful==0.3.6
+ItsDangerous==1.0.0
+Jinja2==2.10
 kafka-python==1.4.3
+MarkupSafe==1.0
+pytz==2018.6
+six==1.11.0
+Werkzeug==0.14.1
