--- a/blablamovebackend/src/main/resources/application.properties
+++ b/blablamovebackend/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.kafka.bootstrap-servers=localhost:9092
-message.topic.name=test
+spring.kafka.bootstrap-servers=kafka:9092
+message.topic.name=topic
