--- a/core/user/config.ini
+++ b/core/user/config.ini
@@ -3,13 +3,9 @@
 [development]
 # KAFKA
 bootstrap_servers=mint-virtual-machine:9092,
-topics=test,ordering,restaurant,eta,delivery,
+topics=test,user,
 
 [production]
 # KAFKA
 bootstrap_servers=kafka:9092,
-topics=ordering,restaurant,eta,delivery,
-
-[messages]
-# TOPIC <=> MESSAGES
-restaurant=CATEGORY_LIST_RESPONSE,FOOD_LIST_RESPONSE,
+topics=user,
