Heartbeat: user consumer

--- a/core/user/config.ini
+++ b/core/user/config.ini
@@ -3,7 +3,7 @@
 [development]
 # KAFKA
 bootstrap_servers=mint-virtual-machine:9092,
-topics=test,user,
+topics=test,user,heartbeat,
 
 [production]
 # KAFKA
