--- a/core/delivery/config.ini
+++ b/core/delivery/config.ini
@@ -3,9 +3,9 @@
 [development]
 # KAFKA
 bootstrap_servers=mint-virtual-machine:9092,
-topics=test,delivery,
+topics=test,delivery,heartbeat,
 
 [production]
 # KAFKA
 bootstrap_servers=kafka:9092,
-topics=delivery,
+topics=delivery,heartbeat
