--- a/core/kpi/config.ini
+++ b/core/kpi/config.ini
@@ -3,9 +3,9 @@
 [development]
 # KAFKA
 bootstrap_servers=mint-virtual-machine:9092,
-topics=test,kpi,
+topics=test,kpi,heartbeat,
 
 [production]
 # KAFKA
 bootstrap_servers=kafka:9092,
-topics=kpi,
+topics=kpi,heartbeat,
