--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,9 +46,13 @@ services:
     environment:
       KAFKA_ADVERTISED_HOST_NAME: "kafka"
       KAFKA_ADVERTISED_PORT: "9092"
-      KAFKA_CREATE_TOPICS: "topic:1:1"
+      KAFKA_CREATE_TOPICS: "topic:1:1,user:1:1,delivery:1:1"
       KAFKA_ZOOKEEPER_CONNECT: "zk:2181"
 
+  influxdb:
+    image: influxdb
+    ports:
+      - 8086:8086
 # Add to containers talking to Kafka:
 # links:
 #     - kafka
