ng serve reachable from outside

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
     depends_on:
       influxdb:
         condition: service_healthy
+      kafka:
+        condition: service_healthy
     links:
       - kafka
       - influxdb
@@ -33,6 +35,9 @@ services:
     image: "al/fe/core/user"
     ports:
       - "5001:5000"
+    depends_on:
+      kafka:
+        condition: service_healthy
     links:
       - kafka
 
@@ -41,6 +46,9 @@ services:
     image: "al/fe/core/delivery"
     ports:
       - "5002:5000"
+    depends_on:
+      kafka:
+        condition: service_healthy
     links:
       - kafka
 
@@ -60,6 +68,8 @@ services:
       KAFKA_ADVERTISED_PORT: "9092"
       KAFKA_CREATE_TOPICS: "topic:1:1,user:1:1,delivery:1:1"
       KAFKA_ZOOKEEPER_CONNECT: "zk:2181"
+    healthcheck:
+        test: "kafka-topics.sh --zookeeper zk:2181 --list 2>&1 | grep \"delivery\""
 
   influxdb:
     image: influxdb
