--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,14 @@ services:
       KAFKA_CREATE_TOPICS: "topic:1:1"
       KAFKA_ZOOKEEPER_CONNECT: "zk:2181"
 
+  influxdb:
+    image: influxdb
+    ports: 8086:8086
+    environment:
+      INFLUXDB_ADMIN_ENABLED: "true"
+      INFLUXDB_ADMIN_USER: "admin"
+      INFLUXDB_ADMIN_PASSWORD: "admin"
+
 # Add to containers talking to Kafka:
 # links:
 #     - kafka
