Prototype with Klein

--- a/core/user/config.ini
+++ b/core/user/config.ini
@@ -2,10 +2,14 @@
 
 [development]
 # KAFKA
+host=localhost
+port=5000
 bootstrap_servers=mint-virtual-machine:9092,
 topics=test,user,heartbeat,
 
 [production]
 # KAFKA
+host=localhost
+port=5000
 bootstrap_servers=kafka:9092,
 topics=user,heartbeat
