--- a/core/user/config.ini
+++ b/core/user/config.ini
@@ -1,15 +1,17 @@
 # Application Configuration File
 
 [development]
-# KAFKA
+# KLEIN
 host=localhost
 port=5000
+# KAFKA
 bootstrap_servers=mint-virtual-machine:9092,
 topics=test,user,heartbeat,
 
 [production]
-# KAFKA
+# KLEIN
 host=localhost
 port=5000
+# KAFKA
 bootstrap_servers=kafka:9092,
 topics=user,heartbeat
