--- a/core/user/Dockerfile
+++ b/core/user/Dockerfile
@@ -4,7 +4,7 @@ ADD . /app
 
 RUN apt-get update -y
 RUN apt-get upgrade -y
-RUN apt-get install libffi-dev build-essential
+RUN apt-get install -y libffi-dev build-essential
 RUN python -m pip install --upgrade pip
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
 
