Testing another binding address for production

--- a/core/kpi/config.ini
+++ b/core/kpi/config.ini
@@ -10,7 +10,7 @@ topics=test,kpi,heartbeat,
 
 [production]
 # KLEIN
-host=localhost
+host=0.0.0.0
 port=5000
 # KAFKA
 bootstrap_servers=kafka:9092,
