Modified delivery webservice to create delivery route

--- a/core/delivery/config.ini
+++ b/core/delivery/config.ini
@@ -6,7 +6,7 @@ host=localhost
 port=5000
 # KAFKA
 bootstrap_servers=mint-virtual-machine:9092,
-topics=test,delivery,heartbeat,
+topics=test,delivery,heartbeat,route
 
 [production]
 # KLEIN
