--- a/blablamovebackend/src/main/resources/application.properties
+++ b/blablamovebackend/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.kafka.bootstrap-servers=kafka:9092
 message.topic.user=user
 message.topic.delivery=delivery
+message.topic.heartbeat=heartbeat
