--- a/adminMarketingUI/package.json
+++ b/adminMarketingUI/package.json
@@ -51,8 +51,11 @@
     "bootstrap": "4.0.0",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
+    "datatables.net": "^1.10.19",
+    "datatables.net-bs4": "^1.10.19",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
+    "jquery": "^3.3.1",
     "nebular-icons": "1.0.8",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
@@ -73,6 +76,7 @@
     "@compodoc/compodoc": "1.0.1",
     "@types/jasmine": "2.5.54",
     "@types/jasminewd2": "2.0.3",
+    "@types/jquery": "^3.3.29",
     "@types/node": "6.0.90",
     "codelyzer": "4.0.2",
     "conventional-changelog-cli": "1.3.4",
