--- a/adminMarketingUI/Dockerfile
+++ b/adminMarketingUI/Dockerfile
@@ -6,4 +6,4 @@ ADD . .
 RUN npm install -g @angular/cli
 RUN npm install
 EXPOSE 4200
-CMD ng serve --host 0.0.0.0
+CMD ng serve --host 0.0.0.0 --deploy-url /ui --base-href /ui
