force apt update

--- a/adminMarketingUI/Dockerfile
+++ b/adminMarketingUI/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /usr/src
 
 ADD . .
 
+RUN apt-get update
 RUN apt-get install -y nginx && systemctl stop nginx
 RUN mv -f ./nginx.conf /etc/nginx/nginx.conf
 RUN npm install -g @angular/cli
