--- a/adminMarketingUI/Dockerfile
+++ b/adminMarketingUI/Dockerfile
@@ -5,11 +5,11 @@ WORKDIR /usr/src
 ADD . .
 
 RUN apt-get update
-RUN apt-get install -y nginx && systemctl stop nginx
+RUN apt-get install -y nginx && service nginx stop
 RUN mv -f ./nginx.conf /etc/nginx/nginx.conf
 RUN npm install -g @angular/cli
 RUN npm install
-RUN ng build --prod --build-optimizer --base-href=/ui/ && systemctl start nginx
+RUN ng build --prod --build-optimizer --base-href=/ui/ && service nginx start
 
 EXPOSE 4200
 
