--- a/adminMarketingUI/Dockerfile
+++ b/adminMarketingUI/Dockerfile
@@ -9,7 +9,8 @@ RUN apt-get install -y nginx && service nginx stop
 RUN mv -f ./nginx.conf /etc/nginx/nginx.conf
 RUN npm install -g @angular/cli
 RUN npm install
-RUN ng build --prod --base-href=/ui/ && service nginx start
+#RUN ng build --prod --build-optimizer --base-href=/ui/ && service nginx start
+RUN ng build --base-href=/ui/ && service nginx start
 
 EXPOSE 4200
 
