--- a/adminMarketingUI/Dockerfile
+++ b/adminMarketingUI/Dockerfile
@@ -6,11 +6,12 @@ ADD . .
 
 RUN apt-get update
 RUN apt-get install -y nginx && service nginx stop
-RUN mv -f ./nginx.conf /etc/nginx/nginx.conf
+RUN mv -f ./nginx.conf /etc/nginx/nginx.conf && chown nginx /etc/nginx/nginx.conf && chgrp nginx /etc/nginx/nginx.conf
 RUN npm install -g @angular/cli
 RUN npm install
 #RUN ng build --prod --build-optimizer --base-href=/ui/ && service nginx start
-RUN ng build --base-href=/ui/ && service nginx start
+RUN ng build --base-href=/ui/
+RUN nginx -c /etc/nginx/nginx.conf -t && service nginx start
 
 EXPOSE 4200
 
