--- a/adminMarketingUI/nginx.conf
+++ b/adminMarketingUI/nginx.conf
@@ -1,6 +1,7 @@
-user nginx;
+user www-data;
+
 worker_processes auto;
-error_log /var/log/nginx/error.log;
+
 pid /run/nginx.pid;
 
 events {
@@ -12,8 +13,11 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    server_tokens       off;
     access_log          /var/log/nginx/access.log  main;
+    error_log           /var/log/nginx/error.log;
+
+    server_tokens       off;
+
     include             /etc/nginx/mime.types;
     default_type        application/octet-stream;
     charset             utf-8;
