update nginx once again the production configuration

--- a/adminMarketingUI/nginx.conf
+++ b/adminMarketingUI/nginx.conf
@@ -23,8 +23,8 @@ http {
     charset             utf-8;
 
     server {
-        listen       4200 default_server;
-        server_name  _;
+        listen       *:4200;
+        server_name  localhost;
         root         /usr/src/dist;
 
         # Default listener
