--- a/adminMarketingUI/Dockerfile
+++ b/adminMarketingUI/Dockerfile
@@ -2,18 +2,17 @@
 FROM node:10.15.1-stretch-slim
 WORKDIR /usr/src
 
+EXPOSE 4200
+
 ADD . .
 
 RUN apt-get update
 RUN apt-get install -y nginx && service nginx stop
-#RUN mv -f ./nginx.conf /etc/nginx/nginx.conf && chown www-data /etc/nginx/nginx.conf && www-data nginx /etc/nginx/nginx.conf
 RUN mv -f ./nginx.conf /etc/nginx/nginx.conf
 RUN npm install -g @angular/cli
 RUN npm install
 #RUN ng build --prod --build-optimizer --base-href=/ui/ && service nginx start
 RUN ng build --base-href=/ui/
-RUN nginx -c /etc/nginx/nginx.conf -t && service nginx start
-
-EXPOSE 4200
+RUN service nginx start
 
 CMD tail -f /var/log/nginx/access.log
