fix nginx configuration

--- a/adminMarketingUI/nginx.conf
+++ b/adminMarketingUI/nginx.conf
@@ -23,13 +23,13 @@ http {
     charset             utf-8;
 
     server {
-        listen       *:4200;
-        server_name  localhost;
-        root         /usr/src/dist;
+        listen      4200;
+        server_name localhost;
 
         # Default listener
         location / {
-            root   html;
+            root    /usr/src/dist;
+            index   index.html index.htm;
         }
 
         error_page 404 /404.html;
