nginx another test

--- a/adminMarketingUI/nginx.conf
+++ b/adminMarketingUI/nginx.conf
@@ -1,5 +1,7 @@
 user root;
 
+daemon off;
+
 worker_processes auto;
 
 pid /run/nginx.pid;
@@ -29,7 +31,7 @@ http {
         # Default listener
         location / {
             root    /usr/src/dist;
-            index   index.html index.htm;
+            index   index.html;
         }
 
         error_page 404 /404.html;
