--- a/adminMarketingUI/Dockerfile
+++ b/adminMarketingUI/Dockerfile
@@ -1,17 +1,25 @@
 # adminMarketingUI PRODUCTION DOCKERFILE
-FROM node:10.15.1-stretch-slim
-WORKDIR /usr/src
+# the webserver is listening on port 80
+# the webserver will respond on both / and /marketing/
 
-EXPOSE 4200
+FROM node:10.15.1-stretch-slim
+
+WORKDIR /usr/src
 
 ADD . .
 
 RUN apt-get update
+
 RUN apt-get install -y nginx && service nginx stop
+
 RUN mv -f ./nginx.conf /etc/nginx/nginx.conf
+
 RUN npm install -g @angular/cli
+
 RUN npm install
-#RUN ng build --prod --build-optimizer --base-href=/ui/ && service nginx start
-RUN ng build --base-href=/ui/
+
+#RUN ng build --prod --build-optimizer
+
+RUN ng build
 
 CMD /usr/sbin/nginx
