--- a/adminMarketingUI/nginx.conf
+++ b/adminMarketingUI/nginx.conf
@@ -11,11 +11,7 @@ events {
 }
 
 http {
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-
-    access_log          /var/log/nginx/access.log  main;
+    access_log          /var/log/nginx/access.log;
     error_log           /var/log/nginx/error.log;
 
     server_tokens       off;
@@ -25,13 +21,20 @@ http {
     charset             utf-8;
 
     server {
-        listen      4200;
-        server_name localhost;
+        listen       80  default_server;
+        server_name  _;
+
+        root    /usr/src/dist;
+        index   index.html;
+
+        # Remove marketing from URI and passback to location /
+        location ~ ^/marketing {
+            rewrite ^/marketing/(.*)$ /$1 break;
+        }
 
         # Default listener
         location / {
-            root    /usr/src/dist;
-            index   index.html;
+            try_files $uri $uri/index.html $uri.html =404;
         }
 
         error_page 404 /404.html;
