--- a/adminMarketingUI/nginx.conf
+++ b/adminMarketingUI/nginx.conf
@@ -20,6 +20,15 @@ http {
     default_type        application/octet-stream;
     charset             utf-8;
 
+    gzip on;
+    gzip_http_version 1.1;
+    gzip_disable      "MSIE [1-6]\.";
+    gzip_min_length   256;
+    gzip_vary         on;
+    gzip_proxied      expired no-cache no-store private auth;
+    gzip_types        text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_comp_level   9;
+
     server {
         listen       80  default_server;
         server_name  _;
@@ -34,7 +43,8 @@ http {
 
         # Default listener
         location / {
-            try_files $uri $uri/index.html $uri.html =404;
+            try_files $uri $uri/ /index.html =404;
+        #    try_files $uri $uri/index.html $uri.html =404;
         }
 
         error_page 404 /404.html;
