--- a/clientUI/Dockerfile
+++ b/clientUI/Dockerfile
@@ -1,9 +1,25 @@
-FROM node:latest
+# clientUI PRODUCTION DOCKERFILE
+# the webserver is listening on port 80
+# the webserver will respond on /
+
+FROM node:10.15.1-stretch-slim
+
 WORKDIR /usr/src
 
 ADD . .
 
+RUN apt-get update
+
+RUN apt-get install -y nginx && service nginx stop
+
+RUN mv -f ./nginx.conf /etc/nginx/nginx.conf
+
 RUN npm install -g @angular/cli
+
 RUN npm install
-EXPOSE 4200
-CMD ng serve --host 0.0.0.0
+
+#RUN ng build --prod --build-optimizer
+
+RUN ng build
+
+CMD /usr/sbin/nginx
