fix nginx root directory

--- a/clientUI/nginx.conf
+++ b/clientUI/nginx.conf
@@ -33,7 +33,7 @@ http {
         listen       80  default_server;
         server_name  _;
 
-        root    /usr/src/dist;
+        root    /usr/src/dist/clientUI;
         index   index.html;
 
         # Default listener
