--- a/legacy/docker-compose_legacy.yml
+++ b/legacy/docker-compose_legacy.yml
@@ -78,10 +78,10 @@ services:
     ports:
       - 9092:9092
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: "kafka"
-      KAFKA_ADVERTISED_PORT: "9092"
-      KAFKA_CREATE_TOPICS: "topic:1:1,user:1:1,delivery:1:1"
-      KAFKA_ZOOKEEPER_CONNECT: "zk:2181"
+      KAFKA_ADVERTISED_HOST_NAME: kafka
+      KAFKA_ADVERTISED_PORT: 9092
+      KAFKA_CREATE_TOPICS: topic:1:1,user:1:1,delivery:1:1
+      KAFKA_ZOOKEEPER_CONNECT: zk:2181
     healthcheck:
         test: "kafka-topics.sh --zookeeper zk:2181 --list 2>&1 | grep \"delivery\""
 
